<resources>
    <string name="app_name">FitWoman</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>
    <string name="personal_data">Personal Data</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="age">Age</string>
    <string name="username2">UserName</string>
    <string name="todo">TODO</string>
    <string name="mhome1">HOME</string>
    <string name="mfitness1">Fitness</string>
    <string name="mactivity1">Activities</string>
    <string name="mdiet1">Diet</string>
    <string name="mmeals1">Meals</string>
    <string name="mprofil1">Profil</string>
    <string name="m_image_drawer">TODO</string>
    <string name="menu_title">FitWoman Menu</string>
    <string name="menu_title_second">welcome</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home_page1">Home page</string>
    <string name="fitness_page1">Fitness Program For You</string>
    <string name="activities_page1">What you did today ?</string>
    <string name="diet_page1">Diet page</string>
    <string name="meals_page1">Meals page</string>
    <string name="profil_page1">Profil page</string>
    <string name="no_account_yet_create_one2">No account yet? Create one</string>
    <string name="todo3">TODO</string>
    <string name="todo22">TODO</string>
    <string name="name22">Name</string>
    <string name="create_account22">Create Account</string>
    <string name="loginMarwa">Login</string>
    <string name="exercice_name">Jumping jacks</string>
    <string name="exercice_description">Repeat x20 times</string>
    <string name="exercice_img">TODO</string>
    <string name="add_activity3">Add Activity</string>
    <string name="name3">Name</string>
    <string name="day4">day: yyyy-mm-dd</string>
    <string name="duration3">Duration: 00:00:00</string>
    <string name="description3">Description</string>
    <string name="confirm3">Confirm</string>
    <string name="mNumberActivities">0</string>
    <string name="mACTIVITY6">ACTIVITY</string>
    <string name="mNumberKCAL">0</string>
    <string name="mkcal6">KCAL</string>
    <string name="mmy_activities6">My Activities</string>
    <string name="mtoday6">Today</string>
    <string name="mcalendar">CALENDAR</string>
    <string name="madd_new_activity">Add New Activity</string>
    <string name="mtodoWHAT">TODO</string>
    <string name="mtodoWHAT2">TODO</string>
    <string name="mtodoWHAT3">TODO</string>
    <string name="mtodoWHAT4">TODO</string>
    <string name="fitwoman1">FitWoman</string>
    <string name="Mtodo100">TODO</string>
    <string name="Mor">Start your experience</string>
    <string name="Mname2511">Name</string>
    <string name="Memail2511">Email</string>
    <string name="facebook_app_id">313160676063240</string>
    <string name="fb_login_protocol_scheme">fb313160676063240</string>
    <string name="todo2710">TODO</string>
    <string name="add_your_weight_today2710">Add Your weight today</string>
    <string name="november2710">November</string>
    <string name="_272710">27</string>
    <string name="followed_plans2710">Followed Plans</string>
    <string name="my_plan2710">My Plan</string>
    <string name="update_profile2710">Update Profile</string>
    <string name="bmi2710">BMI :</string>
    <string name="textview2710">TextView</string>
    <string name="todo27102">TODO</string>
    <string name="bmi_normal">BMI: Normal</string>
    <string name="weight_chart2710">Weight chart</string>
    <string name="november27101">November</string>
    <string name="see_your_weight_chart27102">See your weight chart</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_settings">Details</string>
    <string name="toolbar_title">Ingredients</string>
    <string name="action_search">Search</string>
    <string name="search_hint">Type name…</string>
    <string name="calories">Calories:</string>
    <string name="weightaddprofilhint">weight in Kg</string>
    <string name="todo20190101">TODO</string>
    <string name="fitwoman20190101">FitWoman</string>
    <string name="title_activity_wwelcome">wwelcome</string>
    <string name="common_mistakes">Common Mistakes</string>
    <string name="CR01">TextView</string>
    <string name="CR02">TextView</string>
    <string name="CR03">TextView</string>
    <string name="CR04">TODO</string>
    <string name="CR05">TODO</string>
    <string name="CR06fitwoman">FitWoman</string>
    <string name="CR07menu">Menu</string>
    <string name="CR08">TODO</string>
    <string name="CR09">Kcal/g</string>
    <string name="CR10">3600</string>
    <string name="CR11">12-12-2018 12:30</string>
    <string name="CR12">Breakfast</string>
    <string name="CR13">TextView</string>
    <string name="CR14">TextView</string>
    <string name="CR15">TextView</string>
    <string name="CR016">TODO</string>
    <string name="CR17">TextView</string>
    <string name="CR18">TODO</string>
    <string name="CR19">Pancakes</string>
    <string name="CR20">quantity:</string>
    <string name="CR21">200</string>
    <string name="CR22">g</string>
    <string name="CR23">35</string>
    <string name="CR24">Kcal</string>
    <string name="CR25">TODO</string>
    <string name="CR26">Kcal (100g)</string>
    <string name="CR27">35</string>
    <string name="CR28">Pancakes</string>
    <string name="CR29">See more</string>
    <string name="CR30">Squats</string>
    <string name="CR31">Push Ups</string>
    <string name="CR32">Add Activities</string>
    <string name="CR33">Pluse Lunges</string>
    <string name="CR34">Archery</string>
    <string name="CR35">Golf</string>
    <string name="CR36">More</string>
    <string name="CR37">TODO</string>
    <string name="CR38">Workouts for you</string>
    <string name="CR39">TextView</string>
    <string name="CR40">get Healthy Diet</string>
    <string name="CR41">TODO</string>
    <string name="CR42">TODO</string>
    <string name="CR43">TODO</string>
    <string name="CR44">TODO</string>
    <string name="CR45">TODO</string>
    <string name="CR46">TODO</string>
    <string name="CR47">TextView</string>
    <string name="CR48">TextView</string>
    <string name="CR49">TextView</string>
    <string name="CR50">TextView</string>
    <string name="CR51">TextView</string>
    <string name="CR52">TextView</string>
    <string name="CR53">TextView</string>
    <string name="CR54">TextView</string>
    <string name="CR55">TODO</string>
    <string name="CR56">TODO</string>
    <string name="CR57">FitWoman</string>
    <string name="CR58">Search activity, ex: 2018-12-12</string>
    <string name="CR59">Your activities historic is empty!</string>
    <string name="CR60">Add ingredients</string>
    <string name="CR61">Skip</string>
    <string name="CR63">TODO</string>
    <string name="CR64">TODO</string>
    <string name="CR65">Other</string>
    <string name="CR66">Dinner</string>
    <string name="CR67">Lunch</string>
    <string name="CR68">Breakfast</string>
    <string name="CR69">Select type:</string>
    <string name="CR70">Add your meal</string>
    <string name="CR71">Add ingredient</string>
    <string name="CR72">g</string>
    <string name="CR73">Enter quantity :</string>
    <string name="CR74">Kcal (100 g)</string>
    <string name="CR75">3500</string>
    <string name="CR76">Pancackes</string>
    <string name="CR77">ingrams</string>
    <string name="CR78">in grams</string>
    <string name="CR79">Add ingredient</string>
    <string name="CR80">g</string>
    <string name="CR81">Enter quantity :</string>
    <string name="CR82">Kcal (100 g)</string>
    <string name="CR83">3500</string>
    <string name="CR84">Pancackes</string>
    <string name="CR85">See More BMI Details</string>
    <string name="CR86">TODO</string>
    <string name="CR87">TextView</string>
    <string name="CR88">TODO</string>
    <string name="CR89">TODO</string>
    <string name="CR90">Month</string>
    <string name="CR91">TODO</string>
    <string name="CR92">Your BMI Chart For:</string>
    <string name="CR93">years</string>
    <string name="CR94">cm</string>
    <string name="CR95">kg</string>
    <string name="CR96">Password</string>
    <string name="CR97">Email</string>
    <string name="CR98">Save</string>
    <string name="CR99">Duration in minutes</string>
    <string name="CT01">How was your activity?</string>
    <string name="CT02">TODO</string>
    <string name="CT03">TextView</string>
    <string name="CT04">ex: running</string>
    <string name="CT05">add your activity</string>
    <string name="CT06">No ingredients yet,click to add ingredients to your meal!</string>
    <string name="CT07">Add ingredient to this meal</string>
    <string name="CT08">Ingredients</string>
    <string name="CT09">2018/12/12</string>
    <string name="CT10">Kcal/g</string>
    <string name="CT11">Ingredients</string>
    <string name="CT12">Search meal, ex: 2018/12/12</string>
    <string name="CT13">Your meal historic is empty !</string>
    <string name="CT14">ex: Pancakes</string>
    <string name="CT15">Select ingredients:</string>
    <string name="CT16">ex: Pancakes</string>
    <string name="CT17">Select ingredients:</string>
    <string name="CT18">Serve 3 ouncServe 3 ounces poached salmon with a slaw made by tossing 1 1 of4 cups coleslaw mix and 2 sliced scallions with 1 tablespoon each of rice vinegar and olive oilquinoa</string>
    <string name="CT19">TextView</string>
    <string name="CT20">TODO</string>
    <string name="CT21">Cancel</string>
    <string name="CT22">Confirm</string>
    <string name="CT23">weight in kg</string>
    <string name="CT24">Add Daily Weight</string>
    <string name="CT25">TextView</string>
    <string name="CT26">TextView</string>
    <string name="CT27">TextView</string>
    <string name="CT28">TextView</string>
    <string name="CT29">TextView</string>
    <string name="CT30">Kcal</string>
    <string name="CT31">200</string>
    <string name="CT32">Calories:</string>
    <string name="CT33">Breakfast</string>
    <string name="CT34">:</string>
    <string name="CT35">1</string>
    <string name="CT36">Day</string>
    <string name="CT37">TODO</string>
    <string name="CT38">No activities yet!</string>
    <string name="CT39">2018/12/12</string>
    <string name="CT40">Minutes</string>
    <string name="CT41">0</string>
    <string name="CT42">TODO</string>
    <string name="CT43">Diet Plan for you</string>
    <string name="CT44">7 Days</string>
    <string name="CT45">TextView</string>
    <string name="CT46">Workouts</string>
    <string name="CT47">add Meal</string>
    <string name="CT48">No meals yet,click to add your meals for today!</string>
    <string name="CT49">TODO</string>
    <string name="CT50">Meal history</string>
    <string name="CT51">TODO</string>
    <string name="CT52">Add Daily Weight</string>
    <string name="CT53">update data</string>
    <string name="CT54">TODO</string>
    <string name="CT55">My Meals History</string>
    <string name="CT56">TODO</string>
    <string name="CT57">TODO</string>
    <string name="CT58">My Activities History</string>
    <string name="CT59">TODO</string>
    <string name="CT60">BMI History</string>
    <string name="CT61">TODO</string>
    <string name="CT62">TODO</string>
    <string name="CT64">BMI</string>
    <string name="CT65">20.20</string>
    <string name="CT66">HEIGHT in cm</string>
    <string name="your_name18042019">Your Name</string>
</resources>