<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView2d"
        android:layout_width="0dp"
        android:layout_height="110dp"
        android:layout_margin="5dp"
        android:layout_weight="1"
        android:contentDescription="@string/exercice_img"
        app:srcCompat="@drawable/m7" />

    <LinearLayout
        android:layout_width="241dp"
        android:layout_height="107dp"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:text="@string/CT36"
                android:textSize="15sp"
                android:textColor="@color/pink"/>

            <TextView
                android:id="@+id/dayd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CT35"
                android:textColor="@color/pink"
                android:textSize="15sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CT34"
                android:textSize="15sp"
                android:textColor="@color/pink"/>

        </LinearLayout>
        <TextView
            android:id="@+id/typed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CT33"
            android:textSize="24sp"
            android:textColor="@color/turquoise"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CT32"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/caloriesd"
                android:layout_width="55dp"
                android:layout_height="29dp"
                android:layout_marginLeft="20dp"
                android:text="@string/CT31"
                android:textColor="@color/turquoise"
                android:textSize="24sp"
                android:layout_marginStart="20dp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CT30"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>

