<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/ba"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="348dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="5dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/CR19"
                    android:textColor="#680a36"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CR20"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/quantity"
                    android:layout_width="61dp"
                    android:layout_height="wrap_content"
                    android:text="@string/CR21"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView

                    android:layout_width="34dp"
                    android:layout_height="wrap_content"
                    android:text="@string/CR22"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/calories"
                    android:layout_width="59dp"
                    android:layout_height="wrap_content"
                    android:text="@string/CR23"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/CR24"
                    android:textColor="@android:color/black"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/hellook"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/delete"
                    android:contentDescription="@string/CR25" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>