<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="95dp"
        android:layout_height="110dp"
        android:layout_weight="1"
        android:contentDescription="@string/exercice_img"
        app:srcCompat="@drawable/m59" />

    <LinearLayout
        android:layout_width="241dp"
        android:layout_height="107dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exercice_name"
            android:textColor="#000000"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/exercice_description"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="106dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/m30"
        android:contentDescription="@string/CT37" />

</LinearLayout>
