<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView11"
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/m18"
        android:contentDescription="@string/CR18" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="228dp"
        android:layout_height="75dp"
        android:layout_margin="2dp"
        android:layout_weight="1"
        android:text="@string/CR17"
        android:textColor="#680a36"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="75dp"
        android:layout_margin="3dp"
        android:layout_weight="1"
        app:srcCompat="@drawable/m30"
        android:contentDescription="@string/CR016" />
</LinearLayout>
