<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

   >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="-50dp"
            android:orientation="vertical"
            android:layout_marginEnd="-50dp"
            android:layout_marginStart="20dp">

            <TextView
                android:id="@+id/typed"
                android:layout_width="163dp"
                android:layout_height="39dp"
                android:text="@string/CR12"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#B20247"
                android:textSize="25sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/date"
                android:layout_width="136dp"
                android:layout_height="39dp"
                android:layout_marginTop="5dp"
                android:text="@string/CR11"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>


        <TextView
            android:id="@+id/totalCalories"
            android:layout_width="wrap_content"
            android:layout_height="37dp"
            android:layout_marginLeft="10dp"
            android:text="@string/CR10"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginStart="10dp" />

        <TextView

            android:layout_width="89dp"
            android:layout_height="37dp"
            android:text="@string/CR09"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/hellook"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            app:srcCompat="@drawable/delete"
            android:contentDescription="@string/CR08" />


    </LinearLayout>

</LinearLayout>

