<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

<LinearLayout
android:layout_width="match_parent"
android:layout_height="138dp"
android:layout_margin="5dp"
android:background="@drawable/mgradient6"
android:orientation="vertical">

<TextView
    android:id="@+id/textView6"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:text="@string/CR15"
    android:textColor="#000000"
    android:textSize="24sp"
    android:textStyle="bold" />

<TextView
    android:id="@+id/textView27"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="2dp"
    android:text="@string/CR14"
    android:textColor="#6600cc"
    android:textSize="18sp" />

<TextView
    android:id="@+id/textView28"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="2dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="2dp"
    android:text="@string/CR13"
    android:textColor="#000000"
    android:textSize="18sp" />



</LinearLayout>

</LinearLayout>